--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,28 +1,42 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nodejs-app
+  name: my-deployment
+  labels:
+    app: my-app
 spec:
+  replicas: 3
+  strategy:
+    type: RollingUpdate
+  selector:
+    matchLabels:
+      app: my-app
+      env: dev
   template:
     metadata:
+      name: my-pod
       labels:
-        app: nodejs-app
+        app: my-app
+        env: dev
     spec:
       containers:
-        - name: nodejs-app
-          image: mane22/node
-          ports:
-            - containerPort: 3000
+      - name: node
+        image: mane22/node
+        ports:
+        - containerPort: 3000
+
 ---
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
-  name: nodejs-app-service
+  name:  my-svc
 spec:
   selector:
-    app: nodejs-app
+    app:  my-app
+  type:   LoadBalancer
   ports:
-    - protocol: TCP
-      port: 3000
-      targetPort: 3000
-  type: LoadBalancer
+  - name:  node
+    port:  3000
+    targetPort:  3000
+
+...
